After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 605431 - [PATCH] Fix numerous issues with the FreeBSD backend
[PATCH] Fix numerous issues with the FreeBSD backend
Status: RESOLVED FIXED
Product: libgtop
Classification: Core
Component: bsd
2.28.x
Other FreeBSD
: Normal normal
: ---
Assigned To: libgtop maintainers
libgtop maintainers
Depends on:
Blocks:
 
 
Reported: 2009-12-25 16:56 UTC by Joe Marcus Clarke
Modified: 2011-08-30 13:16 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix numerous issues with the FreeBSD backend (14.73 KB, patch)
2009-12-25 16:56 UTC, Joe Marcus Clarke
none Details | Review
Fix some FreeBSD specific issues (14.81 KB, patch)
2011-06-25 19:34 UTC, Joe Marcus Clarke
none Details | Review

Description Joe Marcus Clarke 2009-12-25 16:56:30 UTC
Created attachment 150371 [details] [review]
Fix numerous issues with the FreeBSD backend

The attached patch fixes numerous bugs (and adds some new OS support) to the FreeBSD backend.

* Correct calculation of CPU time.
* Fix a bug on newer versions of FreeBSD where computing the process map leads to a tight error loop.
* Add support for the new procstat API to obtain the list of open files and cwd.
* Use kvm_openfiles instead of kvm_open to better handle error messages.
* Split some modules out into non-suid modules.
* Properly determine the number of CPUs.
Comment 1 Joe Marcus Clarke 2011-06-25 19:34:17 UTC
Attached is the updated version of this patch.
Comment 2 Joe Marcus Clarke 2011-06-25 19:34:55 UTC
Created attachment 190667 [details] [review]
Fix some FreeBSD specific issues
Comment 3 Jasper Lievisse Adriaanse 2011-06-27 14:33:35 UTC
Applied your patch, thanks.